@@ -79,9 +79,9 @@
 ;; (display-time-mode t)
 (which-function-mode t)
 (setq buffers-menu-max-size 30)
-(when (fboundp 'global-linum-mode)
-  ;; (setq linum-eager nil)
-  (global-linum-mode 1))
+;; (when (fboundp 'global-linum-mode)
+;;   ;; (setq linum-eager nil)
+;;   (global-linum-mode 1))
 ;; (setq-default cursor-type 'bar)
 ;; (blink-cursor-mode -1)
 (setq x-stretch-cursor t)
@@ -765,6 +765,7 @@ Like eclipse's Ctrl+Alt+F."
   ;; (local-set-key (kbd "<return>") 'newline-and-indent)
   (when (fboundp 'whitespace-mode)
     (whitespace-mode t))
+  (linum-mode 1)
   (hs-minor-mode t)
   (ignore-errors (imenu-add-menubar-index)))
 
